--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "file-loader": "^0.11.2",
+    "html-webpack-plugin": "^2.30.1",
     "webpack": "^3.4.1"
   },
   "dependencies": {
