--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
+    "start": "webpack-dev-server --open",
     "watch": "webpack --watch"
   },
   "keywords": [],
@@ -14,7 +15,8 @@
   "devDependencies": {
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
-    "webpack": "^3.4.1"
+    "webpack": "^3.4.1",
+    "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
     "lodash": "^4.17.4"
