--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
+    "uglifyjs-webpack-plugin": "^0.4.6",
     "webpack": "^3.4.1",
     "webpack-dev-server": "^2.7.1"
   },
